# cz-magenta

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cz_magenta/: __init__.py  main.py
tests/: test_commit_parser.py
