[tool.poetry]
name = "cz-magenta"
version = "0.1.0"
description = ""
authors = ["Emil Madsen <sovende@gmail.com>"]
readme = "README.md"
packages = [{include = "cz_magenta"}]

[tool.poetry.dependencies]
python = "^3.10"
commitizen = "^2.37.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
